--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,20 @@
 name = "pb_analyzer"
 dynamic = ["version"]
 dependencies = [
-    "requests",
+    "requests>=2.28",
+    "loguru~=0.6.0",
+    "sqlalchemy~=1.4",
+    "urllib3>=1.26"
 ]
+requires-python = ">=3.10"
 
 [project.scripts]
 pb_analyzer = "pb_analyzer.__main__:main"
 
-[tool.pdm]
-version = { source = "scm" }
+[tool.pdm.version]
+source = "scm"
+write_to = "pb_analyzer/__version__.py"
+write_template = "__version__ = '{}'"  # optional, default to "{}"
 
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
